--- a/13-HTML&CSS-Intro/font-family.html
+++ b/13-HTML&CSS-Intro/font-family.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>18. CSS Typography: Font Family</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="external-styles.css">
   </head>
 
   <body>
@@ -22,46 +21,46 @@
             <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum?
-            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores tenetur ...
+            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores ...
         </p>
         <p class="fira-code">
           0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Fira Code <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum?
-            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores tenetur ...
+            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores ...
         </p>
         <p class="jetbrainsmono">
           0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; JetBrains Mono
             <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum?
-            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores tenetur ...
+            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores ...
         </p>
         <p class="ibm-plex-mono">
           0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; IBM Plex Mono <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum?
-            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores tenetur ...
+            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores ...
         </p>
         <code>
         <p class="cascadia-code">
           0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Cascadia Code <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum?
-            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores tenetur ...
+            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores ...
         </p>
         <p class="consolas">
           0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Consolas <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum?
-            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores tenetur ...
+            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores ...
         </p>
       </code>
         <p class="inconsolata">
           0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Inconsolata <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum?
-            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores tenetur ...
+            Excepturi velit temporibus, possimus ullam perspiciatis sint, sit aperiam asperiores ...
         </p>
       </div>
     </main>
