--- a/13-HTML&CSS-Intro/font-style-weight.html
+++ b/13-HTML&CSS-Intro/font-style-weight.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20. CSS Typography: Font Style and Weight</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="external-styles.css">
   </head>
 
   <body>
@@ -18,70 +17,62 @@
       <div id="main">
         <h1>Font Style and Weight</h1>
         <p class="jetbrainsmono xx-small weight-100">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;xx-small
-              (9px) 100 <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          JetBrains Mono Thin – 100 (xx-small 9px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
-        <p class="jetbrainsmono x-small weight-lighter initial">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;x-small
-              (10px) lighter <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        <p class="jetbrainsmono x-small weight-100 italic">
+          JetBrains Mono Thin Italic – 100 – italic (x-small 10px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
-        <p class="jetbrainsmono px-11 weight-200 inherit">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(11px) 200
-              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        <p class="jetbrainsmono px-11 weight-200">
+          JetBrains Mono ExtraLight – 200 (11px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
-        <p class="jetbrainsmono px-12 weight-300">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(12px) 300
-              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        <p class="jetbrainsmono px-12 weight-300 italic">
+          JetBrains Mono Light Italic – 300 – italic (12px)<br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
-        <p class="jetbrainsmono small weight-light">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp; small (13px)
-              light <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        <p class="jetbrainsmono small light">
+          JetBrains Mono Light – 300 – light (small 13px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
-        <p class="jetbrainsmono px-14 weight-light">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(14px) light
-              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
-        </p>
-        <p class="jetbrainsmono px-14 weight-normal">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(14px) normal
-              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        <p class="jetbrainsmono px-14 weight-400">
+          JetBrains Mono Regular – 400 – normal (14px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-15 weight-500">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(15px) 500
-              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          JetBrains Mono Medium – 500 (15px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
-        <p class="jetbrainsmono px-15 weight-600">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(15px) 600
-              <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        <p class="jetbrainsmono px-15 weight-600 italic">
+          JetBrains Mono SemiBold Italic – 600 – italic (15px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
-        <p class="jetbrainsmono medium weight-bold">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;medium (16px) bold <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
-        </p>
-        <p class="jetbrainsmono large weight-700">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;large (18px) 700 <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        <p class="jetbrainsmono px-16 weight-700">
+          JetBrains Mono Bold – 700 – bold (16px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono larger weight-800 italic">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= => larger (19px) 800 italic <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
-        </p>
-        <p class="jetbrainsmono x-large weight-900 oblique">
-          <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= x-large (24px) 900 oblique <br>
+          JetBrains Mono ExtrabBold Italic – 800 – italic (larger 19px) <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;<br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
