--- a/13-HTML&CSS-Intro/forms.html
+++ b/13-HTML&CSS-Intro/forms.html
@@ -46,7 +46,9 @@
           <input type="checkbox" checked id="interest4" name="interests" value="music">
           <label for="interest4">Music</label>
           <br><br><br><br>
-          <button type="submit">Submit</button>
+          <input type="submit" value="Submit">
+          &nbsp;&nbsp;
+          <input type="reset" value="Reset">
         </form>
         <br>
       </div>
