--- a/13-HTML&CSS-Intro/block-elements.html
+++ b/13-HTML&CSS-Intro/block-elements.html
@@ -16,21 +16,22 @@
         margin-bottom: 20px;
       }
 
-      button {
-        cursor: pointer;
-        text-align: center;
-        padding: 7px;
-        margin-top: 35px;
-        margin-bottom: 20px;
+      input[type="submit"],
+      input[type="reset"] {
         background-color: #203260;
-        color: rgb(242, 245, 250);
+        cursor: pointer;
+        margin: 35px 10px 20px 0;
+        text-align: center;
+        padding: 5px;
         font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
-        font-size: 19px;
-        font-weight: 300;
+        font-size: 18px;
+        color: rgb(242, 245, 250);
       }
 
-      button:hover {
-        color: rgb(65, 207, 253);
+      input[type="submit"]:hover,
+      input[type="reset"]:hover {
+        background-color: rgb(65, 207, 253);
+        color: rgb(242, 245, 250);
       }
     </style>
   </head>
@@ -85,7 +86,8 @@
             </div>
             <br>
             <div>
-              <button type="submit">Submit</button>
+              <input type="submit" value="Submit">
+              <input type="reset" value="Reset">
             </div>
         </form>
       </div>
