--- a/13-HTML&CSS-Intro/font-size.html
+++ b/13-HTML&CSS-Intro/font-size.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>19. CSS Typography: Font Size</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="external-styles.css">
   </head>
 
   <body>
@@ -17,65 +16,113 @@
     <main>
       <div id="main">
         <h1>Font Size</h1>
+        <p class="jetbrainsmono px-9">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(9px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
         <p class="jetbrainsmono xx-small">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;xx-small (9px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;xx-small (9px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
+        <p class="jetbrainsmono px-10">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(10px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-small">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;x-small (10px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;x-small (10px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
+        <p class="jetbrainsmono px-11">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(11px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-12">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(12px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(12px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
+        <p class="jetbrainsmono px-13">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(13px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono small">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;small (13px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;small (13px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-14">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(14px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(14px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono px-15">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;(15px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(15px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
+        <p class="jetbrainsmono px-16">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(16px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono medium">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;medium (16px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;medium (16px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
+        <p class="jetbrainsmono px-18">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(18px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono large">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> &nbsp;large (18px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;large (18px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
+        <p class="jetbrainsmono px-19">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(19px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono larger">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => ->&nbsp;larger (19px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;larger (19px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+        </p>
+        <p class="jetbrainsmono px-24">
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt; &nbsp;(24px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-large">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= &nbsp;x-large (24px)
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
+          &lt;!-- :: :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= --&gt; &nbsp;x-large (24px)
+            <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
       </div>
     </main>
