--- a/13-HTML&CSS-Intro/grouping-selector.html
+++ b/13-HTML&CSS-Intro/grouping-selector.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>17. CSS Selectors: Grouping Selector</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="external-styles.css">
+    <style>
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        color: rgb(102, 168, 248);
+        font-style: italic;
+        font-weight: 700;
+        font-size: larger;
+        /* Style for grouping selector */
+      }
+    </style>
   </head>
 
   <body>
