--- a/13-HTML&CSS-Intro/line-height.html
+++ b/13-HTML&CSS-Intro/line-height.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>22. CSS Typography: Line Height</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="external-styles.css">
   </head>
 
   <body>
@@ -18,43 +17,43 @@
       <div id="main">
         <h1>Line Height</h1>
         <p class="jetbrainsmono weight-light px-15">
-          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: normal
-            <br>
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height:
+            normal <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1 weight-light px-15">
-          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 15px
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: 15px
             (1.0) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-2 weight-light px-15">
-          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 18px
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: 18px
             (1.2) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-3 weight-light px-15">
-          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 20px
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: 20px
             (1.3) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-4 weight-light px-15">
-          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 21px
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: 21px
             (1.4) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-5 weight-light px-15">
-          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 23px
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: 23px
             (1.5) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-6 weight-light px-15">
-          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 24px
+          0123456789 &lt;!-- :: := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: 24px
             (1.6) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
