--- a/HTM&CSS-Exam/index.html
+++ b/HTM&CSS-Exam/index.html
@@ -16,10 +16,10 @@
         <nav>
           <div class="logo"><img src="./images/logo.svg" alt="AXIT Logo"></div>
           <ul class="nav">
-            <li><a href="#features">Features</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#feature-2">Features</a></li>
+            <li><a href="#process">About</a></li>
             <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#testimonials">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
