--- a/HTM&CSS-Exam/index.html
+++ b/HTM&CSS-Exam/index.html
@@ -307,7 +307,9 @@
           <i class="fas fa-rss"></i>
         </div>
       </div>
-      <p>&copy; &nbsp; Sirma Academy &nbsp; 2024</p>
+      <p>&copy; 2024 &nbsp;
+        <a href="https://careers.sirma.com/js-track.html" target="_blank">SirmaCareers</a>
+      </p>
     </footer>
   </body>
 
