--- a/HTM&CSS-Exam/index.html
+++ b/HTM&CSS-Exam/index.html
@@ -14,7 +14,8 @@
     <header>
       <div class="container">
         <nav>
-          <div class="logo"><img src="./images/logo.svg" alt="AXIT Logo"></div>
+          <!-- <div class="logo"><img src="./images/logo.svg" alt="AXIT Logo"></div> -->
+          <a href="index.html" class="logo"><img src="./images/logo.svg" alt="AXIT Logo"></a>
           <ul class="nav">
             <li><a href="#feature-2">Features</a></li>
             <li><a href="#process">About</a></li>
