--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <!-- <h1 id="header">Sirma Academy Professional Program &nbsp;–&nbsp; Front-End with JavaScript</h1> -->
       <!-- <h1 id="header">Front-End with JavaScript</h1> -->
       <!-- <h1 id="header">JS Track Front-End Development</h1> -->
-      <h1 id="header">JavaScript Front-End Development</h1>
+      <!-- <h1 id="header">JavaScript Front-End Development</h1> -->
+      <h1 id="header">Development with JavaScript</h1>
     </header>
 
     <main>
@@ -295,7 +296,8 @@
         <section class="active">
           <ol class="li-space">
             <li>
-              <a class="ex" href="HTM&CSS-Exam/index.html">Web Design from PSD-file – desktop and mobile</a>
+              <a class="ex" href="HTM&CSS-Exam/index.html" target="_blank">Web Design from PSD-file – desktop and
+                mobile</a>
             </li>
           </ol>
         </section>
