--- a/HTM&CSS-Exam/index.html
+++ b/HTM&CSS-Exam/index.html
@@ -14,7 +14,6 @@
     <header>
       <div class="container">
         <nav>
-          <!-- <div class="logo"><img src="./images/logo.svg" alt="AXIT Logo"></div> -->
           <a href="index.html" class="logo"><img src="./images/logo.svg" alt="AXIT Logo"></a>
           <ul class="nav">
             <li><a href="#feature-2">Features</a></li>
@@ -75,12 +74,12 @@
       </section>
 
       <section id="feature-1">
-        <div class="container-feature-1">
+        <div class="container">
           <div class="feature-1-content">
             <div class="tab-buttons">
-              <button class="tab-btn active" data-tab="tab-1">Tab 1</button>
-              <button class="tab-btn" data-tab="tab-2">Tab 2</button>
-              <button class="tab-btn" data-tab="tab-3">Tab 3</button>
+              <button class="tab-btn active" data-tab="tab-1">TAB 1</button>
+              <button class="tab-btn" data-tab="tab-2">TAB 2</button>
+              <button class="tab-btn" data-tab="tab-3">TAB 3</button>
             </div>
             <div class="tabs-text">
               <h2>Tabs with soft transitioning effect.</h2>
@@ -92,7 +91,7 @@
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
               </p>
-              <button type="submit" class="btn-tabs">Download</button>
+              <button type="submit" class="btn-tab">Download</button>
             </div>
             <img src="./images/image_right_u255.png" alt="Standard Picture">
           </div>
@@ -100,7 +99,7 @@
       </section>
 
       <section id="feature-2">
-        <div class="container-feature-2">
+        <div class="container">
           <div class="feature-2-content">
             <img src="./images/image_left_sub_list_u260.png" alt="Sub List Image">
             <div class="sub-list-section">
@@ -137,7 +136,7 @@
       </section>
 
       <section id="feature-3">
-        <div class="container-feature-3">
+        <div class="container">
           <div class="feature-3-content">
             <div class="standard-picture-text">
               <h2>Standard Picture Section</h2>
@@ -145,8 +144,10 @@
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
-                natoque penatibus et magnis dis parturient montes. Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Aenean euismod bibendum laoreet.
+                natoque penatibus et magnis dis parturient montes.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
               </p>
             </div>
             <img src="./images/image_right_standard_u262.png" alt="Standard Picture">
@@ -154,9 +155,9 @@
       </section>
 
       <section id="process">
-        <div class="container-process">
+        <div class="container">
           <div class="process-content">
-            <h2>Why This Is Awesome</h2>
+            <h2>WHY THIS IS AWESOME</h2>
             <hr class="devider-orange">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -197,9 +198,9 @@
       </section>
 
       <section id="pricing">
-        <div class="container-pricing">
+        <div class="container">
           <div class="pricing-content">
-            <h2>Pricing Options</h2>
+            <h2>PRICING OPTIONS</h2>
             <hr class="devider-orange">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -223,38 +224,38 @@
       </section>
 
       <section id="testimonials">
-        <div class="container-testimonials">
+        <div class="container">
           <div class="testimonials-content">
-            <h2>What Our Customers Are Saying</h2>
-            <hr class="devider-orange-30">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
+            <hr class="devider-orange">
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
             <div class="testimonials">
               <div class="testimonial">
-                <h5>
+                <div class="styled-blok">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
                   similique odio aspernatur ex, architecto eaque quo suscipit.
-                </h5>
+                </div>
                 <img src="./images/avatar_2_u231.png" alt="Avatar 1">
                 <h3>Jeremy H.</h3>
-                <h4>Manager</h4>
+                <p>Manager</p>
               </div>
               <div class="testimonial">
-                <h5>
+                <div class="styled-blok">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
                   similique odio aspernatur ex, architecto eaque quo suscipit.
-                </h5>
+                </div>
                 <img src="./images/avatar_2_u231.png" alt="Avatar 2">
                 <h3>John S.</h3>
-                <h4>Freelancer</h4>
+                <p>Freelancer</p>
               </div>
               <div class="testimonial">
-                <h5>
+                <div class="styled-blok">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
                   similique odio aspernatur ex, architecto eaque quo suscipit.
-                </h5>
+                </div>
                 <img src="./images/avatar_2_u231.png" alt="Avatar 3">
                 <h3>Susan W.</h3>
-                <h4>Photographer</h4>
+                <p>Photographer</p>
               </div>
             </div>
           </div>
@@ -262,10 +263,10 @@
       </section>
 
       <section id="custom">
-        <div class="container-custom">
+        <div class="container">
           <div class="custom-content">
             <h2>STYLISH AXURE DESIGN</h2>
-            <hr class="devider-orange">
+            <hr class="devider-white">
             <p>
               Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
             </p>
@@ -297,7 +298,7 @@
     </main>
 
     <footer>
-      <div class="container-footer">
+      <div class="container">
         <div class="brand-icons">
           <i class="fa-brands fa-facebook"></i>
           <i class="fa-brands fa-twitter"></i>
