--- a/HTM&CSS-Exam/index.html
+++ b/HTM&CSS-Exam/index.html
@@ -276,23 +276,23 @@
       </section>
 
       <section id="contact">
-        <div class="container-contact">
+        <div class="container">
           <div class="contact-content">
             <h2>CONTACT US</h2>
             <hr class="devider-orange">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-          <form class="form">
-            <div class="form-content">
-              <div class="left">
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="text" placeholder="Subject">
+            <form class="form">
+              <div class="form-content">
+                <div class="left">
+                  <input type="text" placeholder="Name">
+                  <input type="email" placeholder="Email">
+                  <input type="text" placeholder="Subject">
+                </div>
+                <textarea placeholder="Message"></textarea>
               </div>
-              <textarea placeholder="Message"></textarea>
-            </div>
-            <button type="submit" class="btn-send">Send Message</button>
-          </form>
+              <button type="submit" class="btn-send">Send Message</button>
+            </form>
+          </div>
         </div>
       </section>
     </main>
