--- a/HTM&CSS-Exam/index.html
+++ b/HTM&CSS-Exam/index.html
@@ -34,8 +34,8 @@
             <h1>MODERN AXURE TEMPLATE FOR&nbsp;BEAUTIFUL PROTOTYPES</h1>
             <hr class="devider-whit">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
-              dolor sit amet lacus accumsan et viverra justo commodo.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
             </p>
             <a href="#" class="btn">Download</a>
           </div>
@@ -54,21 +54,23 @@
       </section>
 
       <section id="brand">
-        <div class="container-brand">
+        <div class="container">
           <div class="brand-content">
-            <h2>Social Media</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
-            </p>
-          </div>
-          <div class="brand-icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-google-plus-g"></i>
-            <i class="fa-brands fa-pinterest"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-stumbleupon"></i>
-            <i class="fas fa-rss"></i>
+            <div class="brand-text">
+              <h2>Social Media</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+              </p>
+            </div>
+            <div class="brand-icons">
+              <a href="#contact"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#contact"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#contact"><i class="fa-brands fa-google-plus-g"></i></a>
+              <a href="#contact"><i class="fa-brands fa-pinterest"></i></a>
+              <a href="#contact"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#contact"><i class="fa-brands fa-stumbleupon"></i></a>
+              <a href="#contact"><i class="fas fa-rss"></i></a>
+            </div>
           </div>
         </div>
       </section>
@@ -300,13 +302,13 @@
     <footer>
       <div class="container">
         <div class="brand-icons">
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-google-plus-g"></i>
-          <i class="fa-brands fa-pinterest"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-stumbleupon"></i>
-          <i class="fas fa-rss"></i>
+          <a href="#hero"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#hero"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#hero"><i class="fa-brands fa-google-plus-g"></i></a>
+          <a href="#hero"><i class="fa-brands fa-pinterest"></i></a>
+          <a href="#hero"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#hero"><i class="fa-brands fa-stumbleupon"></i></a>
+          <a href="#hero"><i class="fas fa-rss"></i></a>
         </div>
       </div>
       <p>&copy; 2024 &nbsp;
